[package]
name = "resize"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "resize_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
web-time = "1.1.0"
winit = "0.30.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = { version = "27.0.1", default-features = false, features = [
  "vulkan",
  "wgsl"
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = [
  "Document",
  "HtmlElement",
  "Text",
  "Window"
] }
wgpu = { version = "27.0.1", default-features = false, features = [
  "webgpu",
  "wgsl"
] }
